changed class .button-primary to .button--raised

--- a/public/assets/css/base/_b-elements.less
+++ b/public/assets/css/base/_b-elements.less
@@ -95,7 +95,7 @@ input .inline {
 }
 
 button,
-.button-primary {
+.button--raised {
     padding: 8px 10px;
     margin-top: 12px;
     background: @accentColor;
