changed class from button--secondary to button--flat

--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -153,7 +153,7 @@ tr {
 }
 /* Input Stuff */
 /*Secondary button */
-.button--secondary {
+.button--flat {
   background: #8bc34a;
   font-weight: normal;
 }
