--- a/public/components/GeckoPicker/GeckoPickerTemplate.htm
+++ b/public/components/GeckoPicker/GeckoPickerTemplate.htm
@@ -73,7 +73,7 @@
 
 		<!-- Action buttons -->
 		<div class='picker-action-buttons'>
-			<button ng-click="cancelSelection()">Close</button>
+			<button class="button--raised" ng-click="cancelSelection()">Close</button>
 		</div>
 	<!--</div>
 </div>-->
