Implemented for GeckoTable

--- a/public/components/GeckoTable/GeckoTableTemplate.htm
+++ b/public/components/GeckoTable/GeckoTableTemplate.htm
@@ -59,7 +59,7 @@
             <td>{{gecko.status}}</td>
             <td>{{gecko.currWeight}}</td>
             </a>
-            <td class="right"><i class='fa fa-trash link' ng-click="confirmDelete(gecko._id, gecko.name)"></i></td>
+            <td class="right"><i class='fa fa-trash link' ng-click="confirmDelete(gecko)"></i></td>
 
         </tr>
 
