--- a/public/components/GeckoDetail/GeckoDetailTemplate.htm
+++ b/public/components/GeckoDetail/GeckoDetailTemplate.htm
@@ -33,7 +33,7 @@
 
                 <span class="button--fab">
                 <i class="material-icons link" ng-click="triggerEditMode()" ng-hide="collaspe" title="Enter edit mode">mode_edit</i>
-                <i class="material-icons link" ng-click="deleteGecko(geckoDetail._id,geckoDetail.name)" ng-hide="collaspe" title="Delete this gecko">delete</i>
+                <i class="material-icons link" ng-click="deleteGecko(geckoDetail)" ng-hide="collaspe" title="Delete this gecko">delete</i>
                 <a href="" ng-click="collaspe=!collaspe">
                     <span ng-hide="collaspe"><i class="material-icons">expand_less</i></span>
                 <span ng-show="collaspe"><i class="material-icons">expand_more</i></span>
