Wired up delete icon on event table rows, included confirm dialog.

--- a/public/components/EventsTable/EventsTableTemplate.htm
+++ b/public/components/EventsTable/EventsTableTemplate.htm
@@ -25,12 +25,9 @@
 			</th>
 			<th class='column-actions'></th>
 		</tr>
+
 		<!-- Table Rows -->
 		<tr ng-repeat="event in events | filter:filterEvents | orderBy:filter.sortDirection + filter.sortProperty as filtered">
-			<!--<td>
-				<i class="material-icons" ng-if='!isEventSelected(event)' ng-click='selectEvent(event)'>check_box_outline_blank</i>
-				<i class="material-icons selected" ng-if='isEventSelected(event)' ng-click='unselectEvent(event)'>check_box</i>
-			</td>-->
 			<td>{{event.date | date: 'fullDate'}}</td>
 			<td>{{event.type | prettyEventType}}</td>
 			<td>
@@ -40,18 +37,16 @@
 			<td>{{event.notes}}</td>
 			<td class='column-actions'>
 				<i class='action-icon edit-icon material-icons' ng-click='editEvent(event)'>edit</i>
-				<i class='action-icon delete-icon material-icons'>delete_forever</i>
+				<i class='action-icon delete-icon material-icons' ng-click='deleteEvent(event)'>delete_forever</i>
 			</td>
-	</tr>
-	<tr ng-if='filtered.length == 0'>
-		<td colspan=5 class='empty-indicator'>No events match your filter</td>
-	</tr>
+		</tr>
+		<tr ng-if='filtered.length == 0'>
+			<td colspan=5 class='empty-indicator'>No events match your filter</td>
+		</tr>
 	</table>
 
-	<button style='margin: 10px;' ng-if='selectedEventsCount() == 1' ng-click='deleteSelectedEvent()'>Delete</button>
-
 	<div class='footer'>
-		<button style="margin: 0;" ng-click='addEvent()'>Add Event</button>
+		<button class="button--raised" style="margin: 0;" ng-click='addEvent()'>Add Event</button>
 	</div>
 
 	<add-event-form show='showAddEventForm' gecko-id="{{geckoId}}" event="eventToEdit"></add-event-form>
