--- a/public/components/AddEventForm/AddEventFormTemplate.htm
+++ b/public/components/AddEventForm/AddEventFormTemplate.htm
@@ -45,8 +45,8 @@
 		
 		<!-- Action buttons -->
 		<div class='add-event-action-buttons'>
-			<button ng-click="addEvent()">Add</button>
-			<button ng-click="cancelForm()">Close</button>
+			<button class='button--flat' ng-click="addEvent()">Add</button>
+			<button class='button--flat' ng-click="cancelForm()">Close</button>
 		</div>
 	</div>
 </div>
