Commented out base typing on select and input elements

--- a/public/assets/css/base/_b-base.less
+++ b/public/assets/css/base/_b-base.less
@@ -26,19 +26,8 @@ i {
     padding: 5px;
 }
 
-// Used for label, select, and input elements
-.full-width {
-    display: block;
-    float: left;
-    width: 100%;
-}
 
-label,
-select,
-input {
-    &:not(.inline) {}
-}
-
+/*
 select,
 input {
     border: 0;
@@ -55,6 +44,7 @@ input {
         background: @textColorLight;
     }
 }
+*/
 
 .input--readonly:hover,
 .input--readonly:focus {
