--- a/public/components/AddEventForm/AddEventFormTemplate.htm
+++ b/public/components/AddEventForm/AddEventFormTemplate.htm
@@ -45,7 +45,8 @@
 		
 		<!-- Action buttons -->
 		<div class='add-event-action-buttons'>
-			<button ng-click="addEvent()">Add</button>
+			<button ng-click="addEvent()" ng-if="!isEdit">Add</button>
+			<button ng-click="editEvent()" ng-if="isEdit">Save</button>
 			<button ng-click="cancelForm()">Close</button>
 		</div>
 	</div>
