Created class "field" for styling on input and select elements

--- a/public/assets/css/base/_b-base.less
+++ b/public/assets/css/base/_b-base.less
@@ -27,9 +27,9 @@ i {
 }
 
 
-/*
-select,
-input {
+/* Used for select and input elements */
+
+.field {
     border: 0;
     outline: none;
     border-bottom: dotted 1px @evenRowColor;
@@ -44,9 +44,8 @@ input {
         background: @textColorLight;
     }
 }
-*/
 
-.input--readonly:hover,
+*/ .input--readonly:hover,
 .input--readonly:focus {
     border-bottom: dotted 1px @evenRowColor;
 }
