--- a/public/components/GeckoDetail/GeckoDetailTemplate.htm
+++ b/public/components/GeckoDetail/GeckoDetailTemplate.htm
@@ -147,7 +147,7 @@
     <div ng-show='parentModal.shown' class='modal'>
         <table>
             <div class="table-top grid">
-                <input type="text" class="search-box inline" placeholder="Search List of Geckos" ng-model="parentSearchTerm">
+                <input type="text" class="search-box field" placeholder="Search List of Geckos" ng-model="parentSearchTerm">
                 <button class="button--raised" ng-click="parentModal.shown=false">Close</button>
             </div>
             <thead>
