--- a/public/components/GeckoTable/GeckoTableTemplate.htm
+++ b/public/components/GeckoTable/GeckoTableTemplate.htm
@@ -3,7 +3,7 @@
     <table>
         <div class="table-top">
             <i class="material-icons">search</i>
-            <input type="text" class="search-box inline" placeholder="Search List of Geckos" ng-model="searchTerm">
+            <input type="text" class="search-box field" placeholder="Search List of Geckos" ng-model="searchTerm">
 
 
             <div class="button--fab">
