--- a/public/components/PhotoGallery/PhotoGalleryTemplate.htm
+++ b/public/components/PhotoGallery/PhotoGalleryTemplate.htm
@@ -8,7 +8,7 @@
 	<div class='thumbnails'>
 		<img class='thumbnail-photo' ng-repeat='photo in photos' src='{{photo.path}}' ng-click='showLightbox(photo)'></img>
 	</div>
-	<form style='display: none'>
+	<form>
 		<button type='file' ngf-select="uploadFiles($file, $invalidFiles)" accept="image/*">Upload File</button>
 	</form>
 
