Fixed syntax error in _b-base.less

--- a/public/assets/css/base/_b-base.less
+++ b/public/assets/css/base/_b-base.less
@@ -45,7 +45,7 @@ i {
     }
 }
 
-*/ .input--readonly:hover,
+.input--readonly:hover,
 .input--readonly:focus {
     border-bottom: dotted 1px @evenRowColor;
 }
