--- a/public/components/PhotoGallery/PhotoGalleryTemplate.htm
+++ b/public/components/PhotoGallery/PhotoGalleryTemplate.htm
@@ -6,7 +6,7 @@
 	
 	<!-- Thumbnails -->
 	<div class='thumbnails'>
-		<img class='thumbnail-photo' ng-repeat='photo in photos' src='{{photo.path}}' ng-click='showLightbox(photo)'></img>
+		<img class='thumbnail-photo' ng-repeat='photo in photos' src='{{photo.path}}' ng-click='showLightbox(photo)' ng-if='photo._id != geckoDetail.primaryPhoto.id'>{{photo.path}}</img>
 	</div>
 	<form>
 		<button type='file' ngf-select="uploadFiles($file, $invalidFiles)" accept="image/*">Upload File</button>
