--- a/public/assets/css/layout/_l-layout.less
+++ b/public/assets/css/layout/_l-layout.less
@@ -22,16 +22,14 @@
 
 
 .gecko-detail-card {
-    border-bottom: 1px solid @dividerColor;
+    //border-bottom: 1px solid @dividerColor;
 }
 
 
 .graphs {
-
     min-height: 200px;
-        border: 1px solid @dividerColor;
-    background: @white3;
-
+    //border: 1px solid @dividerColor;
+    //background: @white3;
 }
 
 #weight, #other {
