--- a/public/components/GeckoTable/GeckoTableTemplate.htm
+++ b/public/components/GeckoTable/GeckoTableTemplate.htm
@@ -5,9 +5,8 @@
             <i class="material-icons">search</i>
             <input type="text" class="search-box field" placeholder="Search List of Geckos" ng-model="searchTerm">
 
-
             <div class="button--fab">
-                <a href="" ng-click="showForm = !showForm" class="add-gecko-button">
+                <a href="" ng-click="showAddGeckoModal()" class="add-gecko-button">
                     <i class="material-icons" title="add new gecko">add_circle_outline</i>
                 </a>
             </div>
