--- a/public/assets/css/modules/_form-fields.less
+++ b/public/assets/css/modules/_form-fields.less
@@ -27,12 +27,13 @@
 		outline: none;
 		font-size: 16px;
 		margin-bottom: 1px;
+		font-family: Roboto;
 		
 		&:focus {
 			border-bottom: solid 2px @primary-color;
 			margin-bottom: 0;
 		}
-		padding: 1px;
+		padding: 1px 4px;
 	}
 
 	input[type='date'] {
@@ -52,6 +53,15 @@
 	}
 	
 	margin-bottom: 10px;
+
+	.cover {
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		z-index: 2000;
+	}
 }
 
 @keyframes anim-form-field-fade-in {
@@ -63,14 +73,6 @@
 	}
 }
 
-.cover {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	z-index: 2000;
-}
 
 .calendar-input {
 	font-weight: normal; 
@@ -86,13 +88,49 @@
 		padding: 0;
 		cursor: pointer;
 		color: #a0a0a0;
-		&:hover {
-			color: black;
-		}
+		//&:hover {
+		//	color: black;
+		//}
 	}
 	&.raise {
 		z-index: 2100;
 		position: relative;
+	}
+}
+
+.form-field-select .input {
+	cursor: pointer;
+}
+
+.form-field-select-dropdown {
+	border: solid 1px #f0f0f0;
+	border-top: 0;
+	font-family: Roboto;
+	//.depth-1;
+	position: absolute;
+	z-index: 2100;
+	top: 36px;
+	width: 100%;
+	
+	div {
+		border-bottom: solid 1px #f0f0f0;
+		padding: 1px 4px;
+		border: 0;
+		&:hover {
+			background: @primary-color;
+			color: white;
+			cursor: pointer;
+		}
+		
+		&:nth-last-child(1) {
+			border: 0;
+		}
+	}
+}
+
+.form-field-date {
+	.input {
+		cursor: pointer;
 	}
 }
 
@@ -102,7 +140,7 @@
 	.depth-1;
 	align-items: center;
 	position: absolute;
-	right: 0;
+	left: 0;
 	z-index: 2100;
 	top: 40px;
 	
