--- a/public/views/DemosView/DemosViewTemplate.htm
+++ b/public/views/DemosView/DemosViewTemplate.htm
@@ -8,5 +8,6 @@
 	<div style='width: 300px; display: inline-block;'><form-field-text label='Text Field' value='form.text'></form-field-text></div>
 	<div style='width: 300px; display: inline-block;'><form-field-number label='Number Field' value='form.number'></form-field-number></div>
 	<div style='width: 300px; display: inline-block;'><form-field-date label='Date Field' value='form.date'></form-field-date></div>
+	<div style='width: 300px; display: inline-block;'><form-field-select label='Select Field' value='form.select' options='form.options'></form-field-date></div>
 	
 </div>
