Factored out and cleaned up styles for datatable from event table

--- a/public/assets/css/index.less
+++ b/public/assets/css/index.less
@@ -5,6 +5,7 @@
 @import "base/_b-material.less";
 @import "base/_b-modals.less";
 @import "base/_b-text.less";
+@import "base/_b-datatables.less";
 
 @import "layout/_l-grid.less";
 @import "layout/_l-layout.less";
