--- a/public/components/EventsTable/EventsTableTemplate.htm
+++ b/public/components/EventsTable/EventsTableTemplate.htm
@@ -7,7 +7,7 @@
 		<i class="material-icons close" ng-click="filter.search = ''">close</i>
 	</div>
 
-	<table>
+	<table class='data-table alternating-rows'>
 		<!-- Table Header -->
 		<tr>
 			<!--<th class='column-select'><i class="material-icons">check_box_outline_blank</i></th>-->
@@ -16,7 +16,11 @@
 				<i ng-if="filter.sortProperty == 'date' && filter.sortDirection == '-'" class='material-icons'>arrow_upward</i>
 				<i ng-if="filter.sortProperty == 'date' && filter.sortDirection == '+'" class='material-icons'>arrow_downward</i>
 			</th>
-			<th class='column-type sortable' ng-click="setSort('type')">Event</th>
+			<th class='column-type sortable' ng-click="setSort('type')">
+				Event
+				<i ng-if="filter.sortProperty == 'type' && filter.sortDirection == '-'" class='material-icons'>arrow_upward</i>
+				<i ng-if="filter.sortProperty == 'type' && filter.sortDirection == '+'" class='material-icons'>arrow_downward</i>
+			</th>
 			<th class='column-details'>Details</th>
 			<th class='column-notes sortable' ng-click="setSort('notes')">
 				Notes
@@ -35,7 +39,7 @@
 				<span ng-if="event.type == 'clutch'"><spanspan class='info-label'>Eggs</span> {{event.info.eggs}}</span>
 			</td>
 			<td>{{event.notes}}</td>
-			<td class='column-actions'>
+			<td class='action-icons'>
 				<i class='action-icon edit-icon material-icons' ng-click='editEvent(event)'>edit</i>
 				<i class='action-icon delete-icon material-icons' ng-click='deleteEvent(event)'>delete_forever</i>
 			</td>
