--- a/public/views/GeckoDetailsView/GeckoDetailsViewTemplate.htm
+++ b/public/views/GeckoDetailsView/GeckoDetailsViewTemplate.htm
@@ -3,6 +3,7 @@
 	<div class='status-bar'>
 		<a href="/"><i class="material-icons">home</i></a>
 	</div>
+	{{gecko}}
 
 	<div class='flex-container'>
 		<gecko-detail gecko-id="geckoDetail._id"></gecko-detail>
@@ -11,5 +12,6 @@
 	<div class="graphs">
 		<weight-chart gecko-id="geckoId"></weight-chart>
 	</div>
-	<events-table gecko-id="geckoDetail._id"></events-table>
+	<events-table gecko-id="geckoId"></events-table>
+	<egg-table gecko="geckoDetail"></egg-table>
 </div>
