--- a/public/assets/css/index.less
+++ b/public/assets/css/index.less
@@ -13,6 +13,7 @@
 
 @import "modules/_add-event-form.less";
 @import "modules/_event-table.less";
+@import "modules/_egg-table.less";
 @import "modules/_gecko.less";
 @import "modules/_gecko-picker.less";
 @import "modules/_header.less";
