--- a/public/components/AddGeckoForm/AddGeckoFormTemplate.htm
+++ b/public/components/AddGeckoForm/AddGeckoFormTemplate.htm
@@ -35,7 +35,7 @@
 				</div>
 				<div class="col-1-4">
 					<label>Date of Birth</label>
-					<input class="field" type="date" placeholder="birthdate" ng-model="form.birthdate">
+					<input class="field" type="date" placeholder="birthdate" ng-model="form.hatchDate">
 				</div>
 				<div class="col-1-4">
 					<label>Date of Purchase</label>
