--- a/public/assets/css/modules/_egg-table.less
+++ b/public/assets/css/modules/_egg-table.less
@@ -3,4 +3,9 @@
         padding: 16px;
         font-size: 20px;
     }
+	
+	.column-id { width: 250px }
+	.column-laid { width: 220px }
+	.column-hatching { width: 220px }
+	.column-sex { width: 140px }
 }
