--- a/public/components/EggTable/EggTableTemplate.htm
+++ b/public/components/EggTable/EggTableTemplate.htm
@@ -1,24 +1,23 @@
 <div class='egg-table'>
 	<div class='title'>Eggs</div>
-	{{gecko}}
     <table class='data-table alternating-rows'>
         <tr>
-            <th>ID</th>
-            <th>Date Laid</th>
-            <th ng-if="gecko && gecko.sex == 'male'">Mother</th>
-            <th ng-if="gecko && gecko.sex == 'female'">Father</th>
-            <th>Location</th>
-            <th>Expected to Hatch</th>
-            <th>Sex (Incubated)</th>
+            <th class='column-id'>ID</th>
+            <th class='column-laid'>Date Laid</th>
+            <th class='column-hatching'>Expected to Hatch</th>
+            <th class='column-mother' ng-if="!gecko || gecko.sex == 'male'">Mother</th>
+            <th class='column-father' ng-if="!gecko || gecko.sex == 'female'">Father</th>
+            <th class='column-location'>Location</th>
+            <th class='column-sex'>Sex (Incubated)</th>
         </tr>
         <tr ng-repeat="egg in geckos | filter:{stage: 'egg'}">
-            <td>{{egg.userId}}</td>
-            <td>{{egg}}</td>
-            <td ng-if="gecko && gecko.sex == 'male'">{{egg.motherName}}</td>
-            <td ng-if="gecko && gecko.sex == 'female'">{{egg.father.name}}</td>
-            <td>{{egg.location}}</td>
-            <td>{{estimateExpectedHatchDate(egg) | date:'fullDate'}}</td>
-            <td>{{egg.sex | capitalize}}</td>
+            <td class='column-id'>{{egg.userId}}</td>
+            <td class='column-laid'>{{egg.laidDate | date: 'fullDate'}}</td>
+            <td class='column-hatching'>{{estimateExpectedHatchDate(egg) | date:'fullDate'}}</td>
+            <td class='column-mother' ng-if="!gecko || gecko.sex == 'male'"><a href='/geckos/{{egg.mother._id}}'>{{egg.mother.name}}</a></td>
+			<td class='column-father' ng-if="!gecko || gecko.sex == 'female'"><a href='/geckos/{{egg.father._id}}'>{{egg.father.name}}</a></td>
+            <td class='column-location'>{{egg.location}}</td>
+            <td class='column-sex'>{{egg.sex | capitalize}}</td>
         </tr>
     </table>
 	<div style='height: 50px'></div>
