Notifications component mostly complete. Had to refactor some code in geckoService.js and gecko.js for events, as well as adding notifications to REST API and database.

--- a/public/assets/css/index.less
+++ b/public/assets/css/index.less
@@ -22,3 +22,5 @@
 @import "modules/_modal.less";
 @import "modules/_search-box.less";
 @import "modules/_form-fields.less";
+@import "modules/_notifications-settings.less";
+@import "modules/_add-notification-form.less";
