--- a/public/views/GeckoDetailsView/GeckoDetailsViewTemplate.htm
+++ b/public/views/GeckoDetailsView/GeckoDetailsViewTemplate.htm
@@ -12,6 +12,7 @@
 	<div class="graphs">
 		<weight-chart gecko-id="geckoId"></weight-chart>
 	</div>
+	<notifications-settings></notifications-settings>
 	<events-table gecko-id="geckoId"></events-table>
 	<egg-table gecko="geckoDetail"></egg-table>
 </div>
